--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint:fix": "yarn lint --fix",
     "lint:style": "stylelint **/*.{css,scss}",
     "lint:style:fix": "yarn lint:style --fix",
-    "format": "prettier --write **/*.{css,scss,js,ts,tsx}'"
+    "format": "prettier --write **/*.{js,ts,tsx,css,scss}"
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.9.0",
@@ -30,7 +30,6 @@
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^25.0.0",
-    "stylelint-prettier": "^2.0.0",
     "typescript": "4.6.3"
   }
 }
